# sleep_in_ms

./: LICENSE  README.md  pyproject.toml
src/: sleep_in_ms.py
src/sleep_in_ms/: __init__.py
tests/: test_sleep_in_ms.py
